--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Install dependencies NUI
         run: npm install
       - name: Build Bundles
-        run: npm build
+        run: npm run build
