--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
+    "@hcaptcha/react-hcaptcha": "^1.4.4",
     "@hookform/resolvers": "^2.9.11",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
@@ -29,6 +30,7 @@
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "starboy-hcaptcha": "^1.4.5",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
