--- a/package.json
+++ b/package.json
@@ -32,15 +32,18 @@
     "react-scripts": "5.0.1",
     "starboy-hcaptcha": "^1.4.5",
     "styled-components": "^5.3.6",
+    "symlink-dir": "^5.1.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "link-common": "symlink-dir ../shared src/shared",
+    "postinstall": "npm run link-common",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
@@ -61,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.0.0",
     "@types/prismjs": "^1.26.0",
     "@types/styled-components": "^5.1.26"
   }
