--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "mdi-material-ui": "^7.6.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.4.0",
@@ -66,6 +69,7 @@
   "devDependencies": {
     "@craco/craco": "^7.0.0",
     "@types/prismjs": "^1.26.0",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/styled-components": "^5.1.26"
   }
 }
