--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@hookform/resolvers": "^2.9.11",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
+    "@react-spring/parallax": "^9.6.1",
     "@react-spring/web": "^9.6.1",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
@@ -30,6 +31,7 @@
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-scroll-horizontal": "^1.6.6",
     "starboy-hcaptcha": "^1.4.5",
     "styled-components": "^5.3.6",
     "symlink-dir": "^5.1.1",
@@ -65,6 +67,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.0.0",
+    "@types/lodash": "^4.14.191",
     "@types/prismjs": "^1.26.0",
     "@types/styled-components": "^5.1.26"
   }
