--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.0.10",
     "clipboard-copy": "^4.0.1",
     "date-fns": "^2.29.3",
+    "i18next": "^22.4.10",
     "mdi-material-ui": "^7.6.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
@@ -32,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.4.0",
+    "react-i18next": "^12.1.5",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-scroll-horizontal": "^1.6.6",
