--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^2.29.3",
     "i18next": "^22.4.10",
     "mdi-material-ui": "^7.6.0",
+    "moment": "^2.29.4",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
